fix: improved spacing

--- a/webui/css/style.css
+++ b/webui/css/style.css
@@ -651,3 +651,7 @@ li.pinned:before {
 .pwstrength_viewport_progress {
     margin-top: 5px;
 }
+
+.main-container {
+    padding: 0 !important;
+}
